# qml-fourier-dynamics

./: .gitignore  README.md  precomputed.npz  precomputed_model4_zz.npz  precomputed_model4_zzz.npz  precomputed_schwinger_flux.npz  precomputed_schwinger_stag.npz  precomputed_schwinger_z0.npz  precomputed_stack.npz  precomputed_zz.npz  pyproject.toml  requirements.txt
notebooks/: 01_tfim_physics_validation.ipynb  01_tfim_validation.ipynb  02_schwinger_validation.ipynb  02_schwinger_validation.py  02_tfim_magnetization_validation_2.ipynb  03_hardware_validation.ipynb  03_hardware_validation.py  03_hardware_validation_kernel.py  03_hardware_validation_lasso.py  03_model4_validation.ipynb  04_schwinger_z2_validation.ipynb  04_true_quantum_kernel.ipynb  test.ipynb
presentation/: generate-pdf.js  package-lock.json  package.json  presentation.html  presentation_claude.html  presentation_gemini.html
presentation/beamer/: main.aux  main.nav  main.tex  test_quantikz.tex  test_quantikz2.tex
src/: learning.py  learning_kernel.py  lgt_models.py  models.py  quantum_routines.py  quantum_routines_kernel.py
src/quantum_learning_dynamics/: __init__.py  _types.py  experiment.py  results.py
src/quantum_learning_dynamics/circuits/: __init__.py  _controlled_ops.py  base.py  gate_cache.py  kernel_overlap.py  separate_registers.py  shared_register.py
src/quantum_learning_dynamics/features/: __init__.py  base.py  engines.py  hadamard_b_l.py  meshgrid_tensor.py
src/quantum_learning_dynamics/hamiltonians/: __init__.py  base.py  schwinger.py  tfim.py
src/quantum_learning_dynamics/learners/: __init__.py  base.py  kernel_ridge.py  lasso.py
src/quantum_learning_dynamics/observables/: __init__.py  base.py  library.py
tests/: Fig2_circuits.py  test_learning.py  test_lgt.py  test_quantum_routines.py
tests/qld/: conftest.py  test_experiment_api.py  test_feature_extractor_contract.py  test_features_d1_vs_legacy.py  test_features_dN_meshgrid.py  test_gate_cache.py  test_hamiltonians.py  test_observables.py
