[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantum_learning_dynamics"
version = "0.1.0"
description = "A modular PAC-learning framework for quantum dynamics via Fourier coefficient extraction (Barthe et al., 2025)."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Thomas Lagoutte", email = "tlagoutte56100@gmail.com" },
]
license = { text = "MIT" }
keywords = ["quantum", "machine-learning", "qiskit", "pac-learning", "fourier"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "qiskit>=1.0.0",
  "qiskit-aer>=0.14.0",
  "numpy>=1.26.0",
  "scipy>=1.11.0",
  "scikit-learn>=1.4.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "black>=24.4.0",
  "mypy>=1.10.0",
]
notebooks = [
  "jupyter",
  "matplotlib",
  "ipykernel",
]

[project.urls]
Homepage = "https://github.com/tlagoutte/qml-fourier-dynamics"

# -----------------------------------------------------------------------------
# Build target — the new package only
# -----------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/quantum_learning_dynamics"]

[tool.hatch.build.targets.sdist]
include = [
  "src/quantum_learning_dynamics",
  "tests/qld",
  "README.md",
  "pyproject.toml",
]

# -----------------------------------------------------------------------------
# Ruff
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle + pyflakes
  "I",             # isort
  "UP",            # pyupgrade
  "B",             # bugbear
  "SIM",           # simplify
  "NPY",           # numpy-specific
  "N",             # pep8-naming
  "D",             # pydocstyle — enforces docstrings on the public API
]
ignore = [
  "D203", "D213",  # incompatible pydocstyle defaults
  "E501",          # handled by black
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"**/__init__.py" = ["D104"]

# -----------------------------------------------------------------------------
# Black
# -----------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py312"]

# -----------------------------------------------------------------------------
# Mypy
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
files = ["src/quantum_learning_dynamics", "tests/qld"]

[[tool.mypy.overrides]]
module = ["qiskit.*", "qiskit_aer.*", "sklearn.*", "scipy.*", "tqdm.*"]
ignore_missing_imports = true

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests/qld"]
addopts = "-ra --strict-markers"
markers = [
  "slow: tests that build full Trotter circuits (deselect with -m 'not slow')",
  "legacy: regression tests comparing the new pipeline against the old src/*.py code",
]
